@@ -16,7 +16,7 @@ INCLUDES = -DMAKING_FORMS $(X_CFLAGS) $(BWC)
 
 lib_LTLIBRARIES = libforms.la
 
-libforms_la_LDFLAGS = -no-undefined -Wl,--no-undefined -version-info @SO_VERSION@
+libforms_la_LDFLAGS = -no-undefined -version-info @SO_VERSION@
 
 libforms_la_LIBADD =  $(X_LIBS) $(XPM_LIB) -lX11
 
